[gd_scene load_steps=4 format=3 uid="uid://cw7g6kgh74o3y"]

[ext_resource type="Script" path="res://writing.gd" id="1_t0d6k"]
[ext_resource type="Theme" path="res://main_theme.tres" id="2_o44fx"]
[ext_resource type="FontFile" uid="uid://ddoftpef3n4h1" path="res://Spicy Soup.otf" id="3_lahkm"]

[node name="writing" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t0d6k")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_o44fx")
theme_override_font_sizes/font_size = 25
text = "BELOW ARE REAL QUOTES THAT WILL BE SHOWN 
ALONGSIDE YOUR FAKE QUOTE:"
horizontal_alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_right = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/VBoxContainer/MarginContainer3"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Quote 1" type="Label" parent="CanvasLayer/Control/VBoxContainer/MarginContainer3/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_o44fx")
theme_override_fonts/font = ExtResource("3_lahkm")
theme_override_font_sizes/font_size = 25
text = "gosh"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Quote 2" type="Label" parent="CanvasLayer/Control/VBoxContainer/MarginContainer3/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_o44fx")
theme_override_fonts/font = ExtResource("3_lahkm")
theme_override_font_sizes/font_size = 25
text = "darn"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Quote 3" type="Label" parent="CanvasLayer/Control/VBoxContainer/MarginContainer3/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_o44fx")
theme_override_fonts/font = ExtResource("3_lahkm")
theme_override_font_sizes/font_size = 25
text = "it"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Submitted Quote" type="Label" parent="CanvasLayer/Control/VBoxContainer/MarginContainer3/VBoxContainer"]
visible = false
layout_mode = 2
theme = ExtResource("2_o44fx")
theme_override_fonts/font = ExtResource("3_lahkm")
theme_override_font_sizes/font_size = 25
text = "it"
horizontal_alignment = 1
autowrap_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="QuoteEntry" type="LineEdit" parent="CanvasLayer/Control/VBoxContainer/MarginContainer"]
layout_mode = 2
theme = ExtResource("2_o44fx")
theme_override_fonts/font = ExtResource("3_lahkm")
placeholder_text = "Enter Your Fake Quote..."

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 400
theme_override_constants/margin_right = 400

[node name="Button" type="Button" parent="CanvasLayer/Control/VBoxContainer/MarginContainer2"]
visible = false
layout_mode = 2
theme = ExtResource("2_o44fx")
text = "   Submit   "

[node name="ShameLabel" type="Label" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_o44fx")
theme_override_font_sizes/font_size = 25
horizontal_alignment = 1
autowrap_mode = 3

[node name="HTTPChecker" type="HTTPRequest" parent="."]

[node name="HTTPPusher" type="HTTPRequest" parent="."]

[connection signal="text_changed" from="CanvasLayer/Control/VBoxContainer/MarginContainer/QuoteEntry" to="." method="_on_quote_entry_text_changed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/MarginContainer2/Button" to="." method="_on_button_pressed"]
[connection signal="request_completed" from="HTTPChecker" to="." method="_on_http_checker_request_completed"]
[connection signal="request_completed" from="HTTPPusher" to="." method="_on_http_pusher_request_completed"]
